melhorias para uso do front
